digiKam 5.9.0 - Release date: 2018-02-25

NEW FEATURES:

General      : Libraw updated to last 0.18.7.

BUGFIXES FROM BUGZILLA:

001 ==> 388977 - Error during upgrading core database schema from v8 to v9.
002 ==> 388867 - problem migrating databaseschema from 8 to 9.
003 ==> 388824 - UpdateSchemaFromV7ToV9 fails due to foreign key contraint in 5.8.0-01.
004 ==> 389042 - Auto-rotation/flip Images delete face tags.
005 ==> 337243 - Tool-Tips ignoring custom font size setting.
006 ==> 388320 - Selecting print layout does not stay selected.
007 ==> 389246 - Single click confirmation of suggested face tag.
008 ==> 389208 - Request addition of "Lens" to Tool-Tips (Icon Items).
009 ==> 389342 - Tags are copied although moving of file fails because file with the same name already exists in target location.
010 ==> 389420 - Thumbnails diminishing in size after switching Views.
011 ==> 389493 - Collection browse dialog should be consistent with other browse dialogs on KDE.
012 ==> 389512 - Timeline Thumbnails Not Shown.
013 ==> 389651 - Custom font size is not applied until you enter and exit the settings menu.
014 ==> 388345 - AppImage MySQL connection issues.
015 ==> 389827 - Ignores albums selection.
016 ==> 389835 - Incorrect DateTime manipulation if timestamp is before unix epoch time.
017 ==> 390121 - Thumbnail size is too small.
018 ==> 390136 - digiKam crashes when launching scan and recognize faces.
019 ==> 390325 - Segmentation fault - QMutex::lock().
020 ==> 390443 - FAQ entry unaccurate - Thumbnail generation fails on video files.
021 ==> 390529 - Import from scanner not enabled.
022 ==> 390683 - Batch processing creates 0 byte files on Fujifilm RAF RAW images with lens correction.
023 ==> 390688 - Show pick and color label in thumbnail list [patch].
024 ==> 390162 - digiKam-5.9.0 appimage fail to start.
025 ==> 384853 - Ungrouping images is not working.
026 ==> 390902 - Right sidebar icons not displayed.
027 ==> 